# graft

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  PLAN.md  ROADMAP.md
docs/stories/: gaps.feature
src/: cache.rs  checksum.rs  cli.rs  error.rs  lib.rs  main.rs  merge.rs  state.rs
src/commands/: add.rs  check.rs  init.rs  list.rs  mod.rs  outdated.rs  remove.rs  resolve.rs  sync.rs  upgrade.rs
src/config/: lockfile.rs  manifest.rs
src/github/: auth.rs  client.rs
src/source/: mod.rs  parse.rs  tags.rs  version.rs
tests/: adopt.rs  bdd.rs  init.rs  remove.rs
tests/features/: add.feature  check.feature  init.feature  list.feature  outdated.feature  remove.feature  resolve.feature  upgrade.feature
