[workspace]

[package]
name = "graft"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
description = "A package manager for config files"

[lib]
name = "graft"
path = "src/lib.rs"

[[bin]]
name = "graft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
tempfile = "3"
dirs = "6"
console = "0.15"
semver = "1"
flate2 = "1"
tar = "0.4"
hex = "0.4"
base64 = "0.22"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
rstest = "0.23"
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "bdd"
harness = false
